<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".DetailFragment">
    <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poster" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/movie_poster"
            app:layout_constraintBottom_toTopOf="@+id/title" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/recycler_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/favButton"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/recycler_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/favButton"/>
    <Button
            android:text="@string/favorite_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rating" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/overview" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>